<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_words"
            android:icon="@drawable/ic_nav_words"
            android:title="@string/nav_words" />
        <item
            android:id="@+id/nav_auto"
            android:icon="@drawable/ic_nav_auto_on"
            android:title="@string/nav_auto" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_profile_on"
            android:title="@string/nav_profile" />
    </group>
</menu>